--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,35 @@
 }
 
 
+#profile-image-container {
+    width: 150px;
+    height: 150px;
+    border: 6px solid #F5C518;
+    border-radius: 100%;
+    background-size: cover;
+    background-position: center;
+    margin: 15px auto;
+}
 
+.page-description {
+    color: #999;
+}
+
+#bio {
+    max-width: 400px;
+}
+
+.form-control.disabled {
+    background-color: #bbb;
+}
+
+#change-password-container {
+    margin-top: 30px;
+}
+
+.edit-profile-page .card-btn {
+    width: auto;
+}
 
 #footer {
     background-color: #000;
