--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,8 @@
     margin-top: 30px;
 }
 
-.edit-profile-page .card-btn {
+.edit-profile-page .card-btn,
+#add-movie-container .card-btn{
     width: auto;
 }
 
